fixed bio alignment

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
     color: #333333;
     font-family: 'Assistant', sans-serif;
     font-weight: 400;
-/*    margin: 0 auto;*/
+    margin: 0 auto;
 }
 
 
@@ -172,7 +172,6 @@ footer {
     width: 35%;
     min-width: 200px;
     top: -30px;
-    
 }
 
 h3.connect, h4.send-me, .flex-footer, .created-by {
@@ -401,10 +400,10 @@ h5.tagline {
 
 .bio-top {
     margin: 0 auto;
-    padding-top: 6rem;
+    padding: 6rem 0;
     display: flex;
     flex-direction: column;
-/*    width: 100%;*/
+    width: 100%;
 }
 
 .my-photo {
@@ -424,9 +423,10 @@ h5.tagline {
     font-family: "assistant";
     font-size: 3.0rem;
     letter-spacing: 3px;
-/*    padding-top: 5rem;*/
+    padding-top: 5rem;
     color: #EE701B;
     margin: 0 auto;
+    text-align: center;
 }
     @media screen and (min-width: 768px) {
         .introduction {
@@ -441,18 +441,24 @@ p.intro-bio {
     margin: 0 auto;
     }    
 
-/*
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 990px) {
     .bio-top {
         display: flex;
         flex-direction: row;
+        width: 960px;
+        margin: 0 auto;
+    }
+    
+    .introduction {
+        text-align: left;
+    }
 }
-}
-*/
 
 .bio-buttons {
-/*    padding: 1rem;*/
+    margin: 0 auto;
+    align-content: center;
 }
+
 
 .my-bio {
     letter-spacing: 3px;
@@ -463,8 +469,6 @@ p.intro-bio {
     padding-bottom: 2rem;
     }
 
-
-
 .my-bio-description {
     width: 90%;
 }
@@ -473,11 +477,9 @@ p.intro-bio {
         padding-top: 2rem;
     }
 
-@media screen and (min-width: 768px) {
-    .my-bio-photo { 
-        width: 400px;
-        }
-    }
+.my-bio-text {
+    padding-bottom: 5rem;
+}
 
 
 
